# Pico_OpenTherm_RX

./: CMakeLists.txt  OT_rx.c  README.md
OT_rx_library/: CMakeLists.txt  OT_rx_library.c  OT_rx_library.h  OT_rx_library.pio
OT_tx_library/: CMakeLists.txt  OT_tx_library.pio
OX_tx_library/: OT_tx_library.c  OT_tx_library.h  OT_tx_library.pio
